--- a/app/ui/globals.css
+++ b/app/ui/globals.css
@@ -1,3 +1,9 @@
 @import "tailwindcss";
 
 
+.primary_text {
+    padding: 10px;
+    text-align: center;
+    background-color: yellow;
+    font-size: 1.5rem;
+}
